--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muzammil-ng",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "npx ngh --no-silent"
+    "deploy": "npx ngh"
   },
   "private": true,
   "dependencies": {
